--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -59,7 +59,7 @@ jobs:
         with:
           node-version: '10'
       - uses: ./.github/actions/setup
-      - run: cd mobile/android && ./gradlew clean && cd ../.. && yarn build:android
+      - run: yarn build:android
   tests:
     runs-on: ubuntu-latest
     steps:
