--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -136,6 +136,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true 
         manifestPlaceholders = [
         appAuthRedirectScheme: 'io.identityserver.demo'
       ]
